# tox-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: dottoxedit.rs  echobot.rs  encryptsave.rs  listfriend.rs
src/: address.rs  lib.rs
src/av/: call.rs  error.rs  events.rs  ffi.rs  friend.rs  group.rs  mod.rs  send.rs  toav.rs
src/core/: address.rs  chat.rs  custom.rs  error.rs  events.rs  ffi.rs  file.rs  friend.rs  group.rs  mod.rs  network.rs  newgcgroup.rs  newgcpeer.rs  options.rs  peer.rs  status.rs  utils.rs  vars.rs
src/encryptsave/: error.rs  ffi.rs  mod.rs
src/utils/: macros.rs  mod.rs
