[package]
name = "tox"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
build = "build.rs"

[dependencies]
libc = "*"

[build-dependencies.ffigen]
# git = "https://github.com/quininer/rust-ffigen.git"
path = "../../repos/rust-ffigen"

# [build-dependencies.bindgen]
# git = "https://github.com/crabtw/rust-bindgen.git"
