[package]
name = "tox"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
build = "build.rs"

[dependencies]
libc = "0.2"
chrono = "0.2"
rustc-serialize = "0.3"
clap = "*"
secstr = "*"
ansi_term = "*"
term_grid = "*"
colorhash256 = "*"

[build-dependencies.ffigen]
version = "0.1"
git = "https://github.com/quininer/rust-ffigen.git"

[features]
default = [ "groupchat" ]
groupchat = []
newgroupchat = []
