[package]
name = "tox"
version = "0.2.1"
authors = ["quininer <quininer@live.com>"]
build = "build.rs"

[dependencies]
libc = "0.2"
chrono = "0.2"
rustc-serialize = "0.3"

[build-dependencies.ffigen]
version = "0.2"
git = "https://github.com/quininer/rust-ffigen.git"

[dev-dependencies]
clap = "2.0"
secstr = "0.2"

[dev-dependencies.ttyaskpass]
git = "https://github.com/quininer/ttyaskpass.git"

[features]
default = [ "groupchat" ]
groupchat = []
newgroupchat = []
